--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,51 +1,187 @@
-# FastAPI and Server
+absl-py==2.3.1
+annotated-types==0.7.0
+anyio==4.11.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+arrow==1.4.0
+asttokens==3.0.1
+astunparse==1.6.3
+async-lru==2.0.5
+attrs==25.4.0
+babel==2.17.0
+bcrypt==4.0.1
+beautifulsoup4==4.14.2
+bleach==6.3.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+comm==0.2.3
+contourpy==1.3.3
+cryptography==46.0.3
+cycler==0.12.1
+debugpy==1.8.17
+decorator==5.2.1
+defusedxml==0.7.1
+distro==1.9.0
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.3.0
+executing==2.2.1
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
-python-multipart==0.0.6
-websockets==12.0
-
-# Computer Vision
+fastjsonschema==2.21.2
+flatbuffers==25.9.23
+fonttools==4.60.1
+fqdn==1.5.1
+gast==0.6.0
+gensim==4.3.3
+google-pasta==0.2.0
+grpcio==1.76.0
+h11==0.16.0
+h5py==3.15.1
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+ipykernel==6.29.0
+ipython==9.7.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.8
+isoduration==20.11.0
+jax==0.7.1
+jaxlib==0.7.1
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.12.0
+joblib==1.5.2
+json5==0.12.1
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.3.0
+jupyter_client==8.6.3
+jupyter_core==5.9.1
+jupyter_server==2.17.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.5.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.28.0
+jupyterlab_widgets==3.0.16
+keras==3.6.0
+kiwisolver==1.4.9
+lark==1.3.1
+libclang==18.1.1
+lightgbm==4.6.0
+lxml==6.0.2
+Markdown==3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.9.0
+matplotlib-inline==0.2.1
+mdurl==0.1.2
+mediapipe==0.10.21
+mistune==3.1.4
+ml_dtypes==0.5.4
+motor==3.7.1
+namex==0.1.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+nltk==3.8.1
+notebook==7.0.0
+notebook_shim==0.2.4
+numpy==1.26.4
+openai==2.8.1
+opencv-contrib-python==4.11.0.86
 opencv-python==4.9.0.80
-Pillow==10.2.0
-
-# OpenAI
-openai==1.10.0
-
-# Utilities
-python-dotenv==1.0.0
+opt_einsum==3.4.0
+optree==0.18.0
+packaging==25.0
+pandas==2.2.0
+pandocfilters==1.5.1
+parso==0.8.5
+passlib==1.7.4
+pdf2image==1.17.0
+pickle-mixin==1.0.2
+pillow==10.2.0
+platformdirs==4.5.0
+prometheus_client==0.23.1
+prompt_toolkit==3.0.52
+protobuf==4.25.8
+psutil==7.1.3
+pure_eval==0.2.3
+pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.5.0
 pydantic-settings==2.1.0
-
-
-
-# Core Deep Learning Frameworks
-tensorflow==2.18.0
-keras==3.6.0
-
-# Data Processing and Analysis
-numpy==1.26.4
-pandas==2.2.0
-
-# Natural Language Processing
-nltk==3.8.1
-gensim==4.3.3
-
-# Machine Learning and Metrics
+pydantic_core==2.14.1
+Pygments==2.19.2
+pymongo==4.15.4
+PyMuPDF==1.26.6
+pyparsing==3.2.5
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.0.0
+python-jose==3.5.0
+python-json-logger==4.0.0
+python-multipart==0.0.6
+pytz==2025.2
+pywinpty==3.0.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+qtconsole==5.7.0
+QtPy==2.4.3
+referencing==0.37.0
+regex==2025.11.3
+requests==2.32.5
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
+rich==14.2.0
+rpds-py==0.29.0
+rsa==4.9.1
 scikit-learn==1.5.0
-
-# Visualization
-matplotlib==3.9.0
+scipy==1.13.1
 seaborn==0.13.0
-
-# Utilities
-pickle-mixin==1.0.2
+Send2Trash==1.8.3
+sentencepiece==0.2.1
+setuptools==80.9.0
+six==1.17.0
+smart_open==7.5.0
+sniffio==1.3.1
+sounddevice==0.5.3
+soupsieve==2.8
+stack-data==0.6.3
+starlette==0.35.1
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow_intel==2.18.0
+termcolor==3.2.0
+terminado==0.18.1
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tornado==6.5.2
 tqdm==4.66.1
-
-# Optional but recommended
-jupyter==1.0.0
-notebook==7.0.0
-ipykernel==6.29.0
-# For GPU support (optional - if you have NVIDIA GPU)
-# tensorflow-gpu==2.15.0
-
-
+traitlets==5.14.3
+typing_extensions==4.15.0
+tzdata==2025.2
+uri-template==1.3.0
+urllib3==2.5.0
+uvicorn==0.27.0
+watchfiles==1.1.1
+wcwidth==0.2.14
+webcolors==25.10.0
+webencodings==0.5.1
+websocket-client==1.9.0
+websockets==12.0
+Werkzeug==3.1.3
+wheel==0.45.1
+widgetsnbextension==4.0.15
+wrapt==2.0.1
